--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -16,10 +16,16 @@ header nav .nav-item {
 	text-decoration: none;
 	color: #000;
 }
+
 header nav .nav-item.active {
 	color: #53e283;
 }
+
 header nav .nav-item:hover {
 	cursor: pointer;
 	text-decoration: underline;
+}
+
+.active {
+	color: red;
 }
